# STRATUM-Desktop

./: .gitignore  GIT-WORKFLOW.md  UI-changes.md  convert-to-fork.sh
.github/actions/package-windows/: action.yml
.github/workflows/: build-on-tag.yml  ci-build.yml
installer/windows/: stratum.wxs
qgroundcontrol/: .qgc-root  qgcresources.qrc
qgroundcontrol/cmake/: CustomOptions.cmake
qgroundcontrol/deploy/macos/: qgroundcontrol.icns
qgroundcontrol/src/: CMakeLists.txt  qgc_version.h.in
qgroundcontrol/src/AppSettings/pages/: Video.SettingsUI.json
qgroundcontrol/src/FirmwarePlugin/PX4/: PX4FirmwarePlugin.cc  px4_custom_mode.h
qgroundcontrol/src/FlightMap/MapItems/: VehicleMapItem.qml
qgroundcontrol/src/FlyView/: CMakeLists.txt  ConnectPodAction.qml  EngageAction.qml  EngageDialog.qml  EngagementAbortOverlay.qml  EngagementController.qml  EngagementCountdown.qml  FetchTargetAction.qml  FlyView.qml  FlyViewAOPAction.qml  FlyViewCameraControls.qml  FlyViewDropperAction.qml  FlyViewDropperPanel.qml  FlyViewMap.qml  FlyViewStandoffAction.qml  FlyViewToolStrip.qml  FlyViewToolStripActionList.qml  FlyViewVideo.qml  FlyViewVideoOSD.qml  FlyViewWidgetLayer.qml  GuidedActionAbort.qml  GuidedActionHold.qml  GuidedActionLand.qml  GuidedActionRTL.qml  GuidedActionStandoffMode.qml  GuidedActionTakeoff.qml  GuidedActionTakeoffDialog.qml  GuidedActionsController.qml  GuidedToolStripAction.qml  StandoffController.qml  StandoffDialog.qml  StandoffOrbitDialog.qml  TargetTrackingOverlay.qml  TrackerRoiOverlay.qml  TrackingToggleAction.qml  VisionEngageAction.qml  VisionEngagementOverlay.qml  VisionEngagementStatus.qml
qgroundcontrol/src/MAVLink/: CMakeLists.txt
qgroundcontrol/src/MAVLink/mavlink_definitions/: icarous.xml  stratum.xml
qgroundcontrol/src/MainWindow/: MainWindow.qml
qgroundcontrol/src/QmlControls/: QGroundControlQmlGlobal.cc  QGroundControlQmlGlobal.h  ToolStrip.qml  ToolStripHoverButton.qml
qgroundcontrol/src/Settings/: Video.SettingsGroup.json  VideoSettings.cc  VideoSettings.h
qgroundcontrol/src/TargetFetch/: CMakeLists.txt  TargetFetchManager.cc  TargetFetchManager.h
qgroundcontrol/src/Toolbar/: BatteryIndicator.qml  FlightModeIndicator.qml  FlyViewToolBar.qml  FlyViewToolBarIndicators.qml  GPSIndicator.qml  MainStatusIndicator.qml  RCRSSIIndicator.qml  SelectViewDropdown.qml  TelemetryRSSIIndicator.qml
qgroundcontrol/src/Vehicle/: Vehicle.cc  Vehicle.h
qgroundcontrol/src/Vehicle/FactGroups/: CMakeLists.txt  EngagementStatusFact.json  GPSFact.json  TargetTrackFact.json  VehicleEngagementStatusFactGroup.cc  VehicleEngagementStatusFactGroup.h  VehicleGPSFactGroup.cc  VehicleGPSFactGroup.h  VehicleTargetTrackFactGroup.cc  VehicleTargetTrackFactGroup.h  VehicleVisionEngagementStatusFactGroup.cc  VehicleVisionEngagementStatusFactGroup.h  VisionEngagementStatusFact.json
qgroundcontrol/src/VideoManager/: VideoManager.cc  VideoManager.h
qgroundcontrol/src/VideoManager/VideoReceiver/GStreamer/: GStreamer.cc
qgroundcontrol/tools/common/: file_traversal.py
sim-setup/: .wslconfig  README.md  setup-px4-sitl.sh
